[master] working image drawing with js form materia locations

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="container mt-5" id="welcome_div">
-        <div class=" text-center text-white">
+    <div class="container" id="welcome_div">
+        <div class="text-center text-white">
             <div class="row">
                 <h1 class="col-12">Welcome to the Materia Keeper</h1>
             </div>
