[master] Adding in fontAwesome Adding in printable materia checklist changes to results page layout and home page content

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,8 +18,76 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <iframe src="https://open.spotify.com/embed/album/6LUFxR9PdQttNXKGxA6zRM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <div class="col-md-4">
+                    <div class="alert alert-info col-12">
+                        <div class="row">
+                            <div class="col-2 offset-1 summon rounded-circle"/></div>
+                            <div class="col-2 command rounded-circle"/></div>
+                            <div class="col-2 magic rounded-circle"/></div>
+                            <div class="col-2 independent rounded-circle"/></div>
+                            <div class="col-2 support rounded-circle"/></div>
+                        </div>
+                        <div class="row">
+                            <h2 class="col-12">
+                                Find some materia!
+                            </h2>
+                            <p>
+                                Use the Materia Finder feature to locate any piece of materia in the 
+                                Final Fantasy 7 Universe!
+                            </p>
+                        </div>
+                        <div class="row">
+                            <a href="materia-finder" class="btn btn-primary col-12">Go to Materia Finder</a>
+                        </div>
+                    </div>
+                    <div class="alert alert-success col-12">
+                        <div class="row">
+                            <i class="fa fa-check fa-5x col-12"></i>
+                        </div>
+                        <h2 class="col-12">
+                            Got, Got, Need.
+                        </h2>
+                        <p class="col-12">
+                            Print off a materia checklist here.
+                        </p>
+                        <a href="materia-checklist" class="col-12 btn btn-primary">Get Checklist</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="alert alert-info">
+                        <div class="row col-12 text-center">
+                           <i class="fab fa-spotify fa-5x col-6"></i>
+                           <i class="fas fa-headphones fa-5x col-6"></i>
+                        </div>
+                        <div class="row">
+                            <h2 class="col-12">
+                                Listen to some music!
+                            </h2>
+                            <p>
+                                The soundtrack to Final Fantasy 7 is jawdropping. Preview every song in the game right here and continue
+                                streaming on Spotify.
+                            </p>
+                        </div>
+                        <div class="row">
+                            <a href="materia-finder" class="btn btn-primary col-12">Headphones on!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="alert alert-info">
+                        <img src="{{asset('build/images/ff7_characters.png')}}" alt="Final Fantasy 7 Characters" class="img-fluid"/>
+                        <div class="row">
+                            <h2 class="col-12">
+                                Familiar Faces?
+                            </h2>
+                            <p>
+                                Refresh yourself on the characters of the Final Fantasy 7 World.
+                            </p>
+                        </div>
+                        <div class="row">
+                            <a href="materia-finder" class="btn btn-primary col-12">Go To Characters</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
