[master] altering results pane, ordering related abilities by required_mater_level

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,7 +50,7 @@
                         <p class="col-12">
                             Print off a materia checklist here.
                         </p>
-                        <a href="materia-checklist" class="col-12 btn btn-primary">Get Checklist</a>
+                        <a href="materia-checklist" target="_blank" class="col-12 btn btn-primary">Get Checklist</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -85,7 +85,7 @@
                             </p>
                         </div>
                         <div class="row">
-                            <a href="materia-finder" class="btn btn-primary col-12">Go To Characters</a>
+                            <a href="materia-finder"  class="btn btn-primary col-12">Go To Characters</a>
                         </div>
                     </div>
                 </div>
