--- a/templates/materia_finder/index.html.twig
+++ b/templates/materia_finder/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="container text-center" id="welcome_div">
+    <div class="container text-center pb-5" id="welcome_div">
     	<div class="col-md-6 offset-md-3">
 	        <div class=" ">
 	            <div class="row mt-5">
