--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,11 +17,23 @@
             {% endblock %}
         </div>
         
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-			<script src="/build/runtime.js"></script>
-            <script src="/build/app.js"></script>
-            <script src="/build/vendors~app.js"></script>
-        {% endblock %}
+        <footer>
+            <div class="container">
+                <div class="row mt-5">
+                    <div class="col-md-4 col-12">
+                        <p class="text-white mt-5"><strong>Please Note:</strong> This site is not endorsed, sponsored or 
+                            associated with SquareEnix in any way, shape or form. All images have been taken from various
+                            wiki's and I do not use any material in a commercial way.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% block javascripts %}
+                {{ encore_entry_script_tags('app') }}
+    			<script src="/build/runtime.js"></script>
+                <script src="/build/app.js"></script>
+                <script src="/build/vendors~app.js"></script>
+            {% endblock %}
+        </footer>
     </body>
 </html>
