--- a/templates/materia_finder/partials/results.html.twig
+++ b/templates/materia_finder/partials/results.html.twig
@@ -16,66 +16,74 @@
 
 		<div id="materia_information" class="collapse show" aria-labelledby="materia_information_header" data-parent="#materia_results">
 	  		<div class="card-body">
-				<div class="row text-center">
-					<h3 class="col-12">Locations where <strong>{{ materia.name }}</strong> materia can be bought or found.</h3>
-					<p class="col-12">Locations have been marked on the map below.</p>
-				</div>
-				{% for location in locations %}
-					<div class="row">
-	       	        	<p class="col-12">
-	    					<strong>Location Name:</strong>
-	    					<br>
-	    					{{ location.name }}
-	    				</p>
+	  			<div class="row">
+	  				<div class="row text-center">
+						<h3 class="col-12">Locations where <strong>{{ materia.name }}</strong> materia can be bought or found.</h3>
+						<p class="col-12">Locations have been marked on the map.</p>
+					</div>
+	  				<div class="col-md-6 col-12">
+	  					<ul class="col-8 offset-2">
+							{% for location in locations %}
+								<li>
+	    							<strong>{{ location.name }}</strong>
+	    						</li>
+	    					{% endfor %}
+	    				</ul>
 	    			</div>
-	    		{% endfor %}
-	    		<div class="row">
-	    			<canvas id="mapCanvas"  width="1200" height="1200" style="width:100%; height:100%"></canvas>
+	    			<div class="col-md-6 col-12">
+	    				<div class="row">
+	    					<canvas id="mapCanvas"  width="1200" height="1200" style="width:100%; height:100%"></canvas>
+	    				</div>
+	    			</div>
 	    		</div>
 	    		<hr>
 	    		<div class="row text-center">
-					<h3 class="col-12">Basic information about <strong>{{ materia.name }}</strong> materia.</h3>
+	    			
+	    			<div class="col-md-6 col-12">
+	    				<h3 class="col-12">Basic information about <strong>{{ materia.name }}</strong> materia.</h3>
+						<div class="row">
+	    					<p class="col-12">
+								<strong>Name:</strong>
+								<br>
+								{{materia.name}}
+							</p>
+						</div>
+						<div class="row">
+							<div class="col-2 offset-5 {{materia.type | lower}} rounded-circle"/></div>
+						</div>
+						<div class="row">
+							<p class="col-12">
+								<strong>Type:</strong>
+								<br>
+								{{materia.type}}
+							</p>
+						</div>
+						<div class="row">
+			   				<p class="col-12">
+			   					<strong>Description:</strong>
+			   					<br>
+				   				{{materia.description}}
+							</p>
+						</div>	
+					</div>
+				
+					<div class="col-md-6 col-12">
+						<h3 class="col-12">Abilities granted by <strong>{{ materia.name }}</strong> materia.</h3>
+						{% for ability in abilities %}
+							{% set start = 1 %}
+							{% for i in 1 .. ability.requiredMateriaLevel %}
+								<i class=" fa fa-star fa-2x"></i>
+							{% endfor %}
+	                		<div class="row">
+	                    		<p class="col-12">
+	                    			<strong>At Level {{ ability.requiredMateriaLevel }}:</strong>
+	                    			<br>
+	                    			{{ ability.name }} - {{ ability.description }}
+	                    		</p>
+	                    	</div>
+	                	{% endfor %}
+					</div>
 				</div>
-	    		<div class="row">
-	    			<p class="col-12">
-						<strong>Name:</strong>
-						<br>
-						{{materia.name}}
-					</p>
-				</div>
-				<div class="row">
-					<div class="col-2 offset-5 {{materia.type | lower}} rounded-circle"/></div>
-				</div>
-				<div class="row">
-					<p class="col-12"><strong>Type:</strong><br>
-						{{materia.type}}
-					</p>
-				</div>
-				<div class="row">
-			   		<p class="col-12"><strong>Description:</strong><br>
-				   		{{materia.description}}
-					</p>
-				</div>
-				<hr>
-				<div class="row text-center">
-					<h3 class="col-12">Abilities granted by <strong>{{ materia.name }}</strong> materia.</h3>
-				</div>
-				{% for ability in abilities %}
-                	<div class="row">
-                    	<p class="col-12">
-                    		<strong>Ability Name:</strong>
-                    		<br>
-                    		{{ ability.name }}
-                    	</p>
-                    </div>
-                    <div class="row">
-                    	<p class="col-12">
-                    		<strong>Description:</strong>
-                    		<br>
-                    		{{ ability.description }}
-                    	</p>
-                    </div>
-                {% endfor %}
 			</div>
 		</div>
 	</div>
